# pawse

./: ASSETS.md  README.md  package-lock.json  package.json
.github/workflows/: release.yml
docs/: index.html
docs/superpowers/specs/: 2026-07-07-pawse-design.md
scripts/: matte.py  pack-clips.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/clips/: README.txt
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  schedule.rs
ui/: break.css  break.html  break.js  dog.js  settings.css  settings.html  settings.js  videodog.js
